Вносить незначні зміни в розмітку

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navigation-menu">
           <!-- Логотип веб студії, який є посиланням на головну сторінку сайту -->
           <a class="logo link" href="./index.html" lang="en"
-            >Web <Studio class="logo-second-part">Studio</span></a
+            >Web <span class="logo-second-part">Studio</span></a
           >
           <!-- Список посилань на інші сторінки сайту -->
           <ul class="navigation-list list">
@@ -200,7 +200,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
-                src="./images/our-team-section/team-card-1.jpg"
+                src="./images/team-section/team-card-1.jpg"
                 alt="Продуктовый дизайнер"
                 width="270"
                 height="260"
@@ -249,7 +249,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
-                src="./images/our-team-section/team-card-2.jpg"
+                src="./images/team-section/team-card-2.jpg"
                 alt="Фронтенд разработчик"
                 width="270"
                 height="260"
@@ -298,7 +298,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
-                src="./images/our-team-section/team-card-3.jpg"
+                src="./images/team-section/team-card-3.jpg"
                 alt="Маркетолог"
                 width="270"
                 height="260"
@@ -345,7 +345,7 @@
             <li class="team-list-item">
               <img
                 class="team-list-item-image"
-                src="./images/our-team-section/team-card-4.jpg"
+                src="./images/team-section/team-card-4.jpg"
                 alt="Дизайнер интерфейсов"
                 width="270"
                 height="260"
