Додає стилі для геометрії та позиціонування контенту сторінки "Портфолио"

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </section>
 
       <!-- Секція особливостей -->
-      <section class="features-section">
+      <section class="section features-section">
         <div class="container">
           <!-- Відсутній на макеті заголовок секції особливостей-->
           <h2 class="section-title" hidden>Особенности</h2>
@@ -148,7 +148,7 @@
       </section>
 
       <!-- Секція занять -->
-      <section class="services-section">
+      <section class="section services-section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <!-- Перелік послуг, які надає веб студія -->
@@ -191,7 +191,7 @@
       </section>
 
       <!-- Секція команди -->
-      <section class="team-section">
+      <section class="section team-section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <!-- Список працівників веб студії -->
@@ -210,7 +210,7 @@
                 Product Designer
               </p>
               <!-- Список посилань на профілі працівника в соціальних мережах -->
-              <ul class="worker-social-networks-pages-list">
+              <ul class="worker-social-networks-pages-list list">
                 <!-- Посилання на сторінку працівника в соціальні мережі Інстаграм -->
                 <li class="worker-social-networks-pages-list-item">
                   <a
@@ -220,7 +220,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Твіттер -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -228,7 +228,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Фейсбук -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -236,7 +236,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Лінкедін -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -259,7 +259,7 @@
                 Frontend Developer
               </p>
               <!-- Список посилань на профілі працівника в соціальних мережах -->
-              <ul class="worker-social-networks-pages-list">
+              <ul class="worker-social-networks-pages-list list">
                 <!-- Посилання на сторінку працівника в соціальні мережі Інстаграм -->
                 <li class="worker-social-networks-pages-list-item">
                   <a
@@ -269,7 +269,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Твіттер -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -277,7 +277,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Фейсбук -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -285,7 +285,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Лінкедін -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -306,7 +306,7 @@
               <h3 class="team-list-item-title">Андрей Шевченко</h3>
               <p class="team-list-item-description" lang="en">Marketing</p>
               <!-- Список посилань на профілі працівника в соціальних мережах -->
-              <ul class="worker-social-networks-pages-list">
+              <ul class="worker-social-networks-pages-list list">
                 <!-- Посилання на сторінку працівника в соціальні мережі Інстаграм -->
                 <li class="worker-social-networks-pages-list-item">
                   <a
@@ -316,7 +316,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Твіттер -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -324,7 +324,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Фейсбук -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -332,7 +332,7 @@
                   ></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Лінкедін -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
@@ -353,7 +353,7 @@
               <h3 class="team-list-item-title">Иван Николаев</h3>
               <p class="team-list-item-description" lang="en">UI Designer</p>
               <!-- Список посилань на профілі працівника в соціальних мережах -->
-              <ul class="worker-social-networks-pages-list">
+              <ul class="worker-social-networks-pages-list list">
                 <!-- Посилання на сторінку працівника в соціальні мережі Інстаграм -->
                 <li class="worker-social-networks-pages-list-item">
                   <a
@@ -393,7 +393,7 @@
       </section>
 
       <!-- Секція постійних клієнтів -->
-      <section class="customers-section">
+      <section class="section customers-section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <!-- Список постійних клієнтів -->
@@ -461,7 +461,7 @@
     <footer class="footer">
       <div class="container">
         <!-- Блок-обгортка для подальшої стилізації -->
-        <div>
+        <div class="contacts-block">
           <!-- Логотип веб студії, який є посиланням на головну сторінку сайту -->
           <a class="logo link" href="./index.html" lang="en"
             >Web <span class="logo-second-part">Studio</span></a
@@ -499,11 +499,11 @@
           </address>
         </div>
         <!-- Блок-обгортка для подальшої стилізації -->
-        <div>
+        <div class="social-networks-block">
           <!-- Заклик до дії -->
           <b class="call-to-action">присоединяйтесь</b>
           <!-- Список посилань на профілі веб студії в соціальних мережах -->
-          <ul class="studio-social-networks-pages-list">
+          <ul class="studio-social-networks-pages-list list">
             <!-- Посилання на сторінку веб студії в соціальній мережі Інстаграм -->
             <li class="studio-social-networks-pages-list-item">
               <a
