Вносить окремі зміни у геометрію та позиціонування контенту обох сторінок

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Шапка сайту -->
     <!-- В макеті названа верхньою лінією -->
     <header class="header">
-      <div class="container header-container">
+      <div class="container">
         <!-- Навігаційне меню сайту-->
         <nav class="navigation-menu">
           <!-- Логотип веб студії, який є посиланням на головну сторінку сайту -->
@@ -217,7 +217,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Инстаграм"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/instagram-logo-1.svg"
+                      alt="Иконка социальной сети Инстаграм"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Твіттер -->
                 <li class="worker-social-networks-pages-list-item">
@@ -225,7 +228,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Твиттер"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/twitter-logo-1.svg"
+                      alt="Иконка социальной сети Твиттер"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Фейсбук -->
                 <li class="worker-social-networks-pages-list-item">
@@ -233,7 +239,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Фейсбук"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/facebook-logo-1.svg"
+                      alt="Иконка социальной сети Фейсбук"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Лінкедін -->
                 <li class="worker-social-networks-pages-list-item">
@@ -241,7 +250,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Линкедин"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/linkedin-logo-1.svg"
+                      alt="Иконка социальной сети Линкедин"
+                  /></a>
                 </li>
               </ul>
             </li>
@@ -266,7 +278,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Инстаграм"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/instagram-logo-1.svg"
+                      alt="Иконка социальной сети Инстаграм"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Твіттер -->
                 <li class="worker-social-networks-pages-list-item">
@@ -274,7 +289,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Твиттер"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/twitter-logo-1.svg"
+                      alt="Иконка социальной сети Твиттер"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Фейсбук -->
                 <li class="worker-social-networks-pages-list-item">
@@ -282,7 +300,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Фейсбук"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/facebook-logo-1.svg"
+                      alt="Иконка социальной сети Фейсбук"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Лінкедін -->
                 <li class="worker-social-networks-pages-list-item">
@@ -290,7 +311,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Линкедин"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/linkedin-logo-1.svg"
+                      alt="Иконка социальной сети Линкедин"
+                  /></a>
                 </li>
               </ul>
             </li>
@@ -313,7 +337,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Инстаграм"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/instagram-logo-1.svg"
+                      alt="Иконка социальной сети Инстаграм"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Твіттер -->
                 <li class="worker-social-networks-pages-list-item">
@@ -321,7 +348,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Твиттер"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/twitter-logo-1.svg"
+                      alt="Иконка социальной сети Твиттер"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Фейсбук -->
                 <li class="worker-social-networks-pages-list-item">
@@ -329,7 +359,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Фейсбук"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/facebook-logo-1.svg"
+                      alt="Иконка социальной сети Фейсбук"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Лінкедін -->
                 <li class="worker-social-networks-pages-list-item">
@@ -337,7 +370,10 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Линкедин"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/linkedin-logo-1.svg"
+                      alt="Иконка социальной сети Линкедин"
+                  /></a>
                 </li>
               </ul>
             </li>
@@ -360,31 +396,43 @@
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Инстаграм"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/instagram-logo-1.svg"
+                      alt="Иконка социальной сети Инстаграм"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Твіттер -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Твиттер"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/twitter-logo-1.svg"
+                      alt="Иконка социальной сети Твиттер"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Фейсбук -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Фейсбук"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/facebook-logo-1.svg"
+                      alt="Иконка социальной сети Фейсбук"
+                  /></a>
                 </li>
                 <!-- Посилання на сторінку працівника в соціальні мережі Лінкедін -->
-                <li class="worker-social-networks-list-item">
+                <li class="worker-social-networks-pages-list-item">
                   <a
                     class="worker-social-networks-pages-list-item-link link"
                     href=""
                     aria-label="Ссылка на страницу работника в социальной сети Линкедин"
-                  ></a>
+                    ><img
+                      src="./images/team-section/social-networks/linkedin-logo-1.svg"
+                      alt="Иконка социальной сети Линкедин"
+                  /></a>
                 </li>
               </ul>
             </li>
@@ -403,7 +451,7 @@
               <a class="customers-list-item-link link" href=""
                 ><img
                   class="customers-list-item-link-image"
-                  src="./images/regular-customers-section/regular-customer-1-logo.svg"
+                  src="./images/customers-section/customer-1-logo.svg"
                   alt="Логотип постоянного клиента 1"
               /></a>
             </li>
@@ -412,7 +460,7 @@
               <a class="customers-list-item-link link" href=""
                 ><img
                   class="customers-list-item-link-image"
-                  src="./images/regular-customers-section/regular-customer-2-logo.svg"
+                  src="./images/customers-section/customer-2-logo.svg"
                   alt="Логотип постоянного клиента 2"
               /></a>
             </li>
@@ -421,7 +469,7 @@
               <a class="customers-list-item-link link" href=""
                 ><img
                   class="customers-list-item-link-image"
-                  src="./images/regular-customers-section/regular-customer-3-logo.svg"
+                  src="./images/customers-section/customer-3-logo.svg"
                   alt="Логотип постоянного клиента 3"
               /></a>
             </li>
@@ -430,7 +478,7 @@
               <a class="customers-list-item-link link" href=""
                 ><img
                   class="customers-list-item-link-image"
-                  src="./images/regular-customers-section/regular-customer-4-logo.svg"
+                  src="./images/customers-section/customer-4-logo.svg"
                   alt="Логотип постоянного клиента 4"
               /></a>
             </li>
@@ -439,7 +487,7 @@
               <a class="customers-list-item-link link" href=""
                 ><img
                   class="customers-list-item-link-image"
-                  src="./images/regular-customers-section/regular-customer-5-logo.svg"
+                  src="./images/customers-section/customer-5-logo.svg"
                   alt="Логотип постоянного клиента 5"
               /></a>
             </li>
@@ -448,7 +496,7 @@
               <a class="customers-list-item-link link" href=""
                 ><img
                   class="customers-list-item-link-image"
-                  src="./images/regular-customers-section/regular-customer-6-logo.svg"
+                  src="./images/customers-section/customer-6-logo.svg"
                   alt="Логотип постоянного клиента 6"
               /></a>
             </li>
@@ -510,7 +558,10 @@
                 class="studio-social-networks-pages-list-item-link link"
                 href=""
                 aria-label="Ccылка на страницу веб студии в социальной сети Инстаграм"
-              ></a>
+                ><img
+                  src="./images/footer/instagram-logo-2.svg"
+                  alt="Иконка социальной сети Инстаграм"
+              /></a>
             </li>
             <!-- Посилання на сторінку веб студії в соціальній мережі Твіттер -->
             <li class="studio-social-networks-pages-list-item">
@@ -518,7 +569,10 @@
                 class="studio-social-networks-pages-list-item-link link"
                 href=""
                 aria-label="Ccылка на страницу веб студии в социальной сети Твиттер"
-              ></a>
+                ><img
+                  src="./images/footer/twitter-logo-2.svg"
+                  alt="Иконка социальной сети Твиттер"
+              /></a>
             </li>
             <!-- Посилання на сторінку веб студії в соціальній мережі Фейсбук -->
             <li class="studio-social-networks-pages-list-item">
@@ -526,7 +580,10 @@
                 class="studio-social-networks-pages-list-item-link link"
                 href=""
                 aria-label="Ccылка на страницу веб студии в социальной сети Фейсбук"
-              ></a>
+                ><img
+                  src="./images/footer/facebook-logo-2.svg"
+                  alt="Иконка социальной сети Фейсбук"
+              /></a>
             </li>
             <!-- Посилання на сторінку веб студії в соціальній мережі Лінкедін -->
             <li class="studio-social-networks-pages-list-item">
@@ -534,7 +591,10 @@
                 class="studio-social-networks-pages-list-item-link link"
                 href=""
                 aria-label="Ccылка на страницу веб студии в социальной сети Линкедин"
-              ></a>
+                ><img
+                  src="./images/footer/linkedin-logo-2.svg"
+                  alt="Иконка социальной сети Линкедин"
+              /></a>
             </li>
           </ul>
         </div>
