Фіксить геометрію та позиціонування контенту обох сторінок

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!-- В макеті помилково названа шапкою сайту -->
       <section class="hero-section">
         <h1 class="hero-section-title">
-          Эффективные решения для вашего бизнеса
+          Эффективные решения<br />для вашего бизнеса
         </h1>
         <button class="modal-window-button" type="button">
           Заказать услугу
