--- a/portfolio.html
+++ b/portfolio.html
@@ -29,15 +29,15 @@
           <ul class="navigation-list list">
             <!-- Посилання на головну сторінку -->
             <li class="navigation-list-item">
-              <a
-                class="navigation-list-item-link current link"
-                href="./index.html"
+              <a class="navigation-list-item-link link" href="./index.html"
                 >Студия</a
               >
             </li>
             <!-- Посилання на сторінку "Портфолио" -->
             <li class="navigation-list-item">
-              <a class="navigation-list-item-link link" href="./portfolio.html"
+              <a
+                class="navigation-list-item-link current link"
+                href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
